crates/config/tests/snapshots/block_string_fold_leading_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-fold-leading-empty

## Input

```mical
key >

  hello
  world

```

## JSON

```json
{
  "key": "\nhello world\n"
}
```

vim:ft=markdown
