crates/config/tests/snapshots/block_string_fold_style.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-fold-style

## Input

```mical
key >
  line 1
  line 2

```

## JSON

```json
{
  "key": "line 1 line 2\n"
}
```

vim:ft=markdown
