crates/config/tests/snapshots/block_string_fold_trailing_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-fold-trailing-empty

## Input

```mical
a >
  hello
  world


b value

```

## JSON

```json
{
  "a": "hello world\n",
  "b": "value"
}
```

vim:ft=markdown
