crates/config/tests/snapshots/block_string_folded.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-folded

## Input

```mical
text >
  This is a long
  sentence split
  over lines.

  New paragraph.

```

## JSON

```json
{
  "text": "This is a long sentence split over lines.\nNew paragraph.\n"
}
```

vim:ft=markdown
