crates/config/tests/snapshots/block_string_folded_extra_indent_consecutive.snap
---
source: crates/config/tests/snapshots.rs
assertion_line: 535
---
# block-string-folded-extra-indent-consecutive

## Input

```mical
key >
  a
    b
    c
  d

```

## JSON

```json
{
  "key": "a\n  b\n  c\nd\n"
}
```

vim:ft=markdown
