crates/config/tests/snapshots/block_string_folded_extra_indent_empty_line.snap
---
source: crates/config/tests/snapshots.rs
assertion_line: 543
---
# block-string-folded-extra-indent-empty-line

## Input

```mical
key >
  a
    b

  c

```

## JSON

```json
{
  "key": "a\n  b\nc\n"
}
```

vim:ft=markdown
