crates/config/tests/snapshots/block_string_folded_extra_indent_strip.snap
---
source: crates/config/tests/snapshots.rs
assertion_line: 543
---
# block-string-folded-extra-indent-strip

## Input

```mical
key >-
  a
  b
    c
  d
  e

```

## JSON

```json
{
  "key": "a b\n  c\nd e"
}
```

vim:ft=markdown
