crates/config/tests/snapshots/block_string_folded_indented_suppression.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-folded-indented-suppression

## Input

```mical
key >
  a
  b
    c
  d
  e

```

## JSON

```json
{
  "key": "a b\n  c\nd e\n"
}
```

vim:ft=markdown
