crates/config/tests/snapshots/block_string_folded_keep.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-folded-keep

## Input

```mical
text >+
  first
  second

a b

```

## JSON

```json
{
  "a": "b",
  "text": "first second\n\n"
}
```

vim:ft=markdown
